field-jupiter/0.0.1/README.md
# field-jupiter

Generated by SUSE AI Factory

## Metadata
- **Name**: field-jupiter
- **Version**: 0.0.1
- **Description**: 
- **Support**: opensource
- **Tier**: certified
- **Status**: new
- **Category**: Inference

## Authors
- alessandro.festa1@suse.com (Owner)

## Stack Composition
This stack includes the following components:

- **Apache Airflow** (apache-airflow): Apache Airflow is an open-source platform for programmatically authoring, scheduling, and monitoring complex workflows, primarily used for data pipelines, but also for other automated tasks like infrastructure management. (Version: )
- **Ollama** (ollama): Get up and running with Llama 3.2, Mistral, Gemma 2, and other large language models. (Version: )

## Installation
To install this stack on your Kubernetes cluster, ensure you have Helm installed and run:

```bash
helm upgrade --install field-jupiter ./chart -n field-jupiter --create-namespace
```

## Upgrade
To upgrade an existing installation with new values or a newer version of the chart:

```bash
helm upgrade field-jupiter ./chart -n field-jupiter
```

## Teardown
To remove the stack and all its components from your cluster:

```bash
helm uninstall field-jupiter -n field-jupiter
```
